--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/pooja.png" alt="Pooja's profile picture" width="200" height="200"></td>
+      <td><img src="pooja.png" alt="Pooja's profile picture" width="200" height="200"></td>
       <td><h1>Pooja Wattamwar</h1>
       <p><em><strong>Software Engineer</strong></em></p>
       <p>I am a Software Developer. I love coffee</p></td>
